k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aviation-weather # Deployment name
  namespace: aviation-weather # Namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aviation-weather
  template:
    metadata:
      labels:
        app: aviation-weather
    spec:
      containers:
      - name: server
        image: aviation-weather-service:v1 # Docker image
        command: ["go", "run", "cmd/server/main.go"]
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 10

      - name: scheduler
        image: aviation-weather-service:v1
        command: ["go", "run", "cmd/scheduler/main.go"]
        ports:
        - containerPort: 8081
