k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aviation-weather-ingress
  namespace: aviation-weather
spec:
  ingressClassName: nginx
  rules:
  - host: "localhost"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: aviation-weather-service
              port:
                number: 80
